EGRET 3.0.10
===========
* Removed readNWISSample because the underlying data from NWIS is retired.
* Style updates.


EGRET 3.0.9
===========
* Bug fix for the monthly concentration trend results in runPairs.
* Formatting and style updates in plotMonthTrend

EGRET 3.0.8
===========
* Added GenConc to tableResult function
* Added monthly trend to runPairs
* Added plotMonthTrend function
* Improved support for custom axes
* In WRTDSKalman, removed genmissing from first and last iteration
* Improved documentation
* Fixed printSeries if period of record was less than 6 month
* Changed BugsReport URL to https://github.com/DOI-USGS/EGRET/issues 
* Assure Sample is sorted chronologically
* plotConcHist and plotFluxHist set to default to the Sample date range instead of the Daily date range.
* Add Kalman option for plotConcTimeDaily and plotFluxTimeDaily
* Improved reproducibility in WRTDSKalman using seed argument.
* Included more columns from the raw data in the Sample data frame. These columns are not used in EGRET functions, but might be useful for further analysis.


EGRET 3.0.7
===========
* Fixed a flux unit label issue for plotTimeSlice
* Added nDays in calculateMonthlyResults

EGRET 3.0.6
===========
* Fixed broken example in saveResults. Function will be deprecated in future versions.

EGRET 3.0.5
===========
* WRTDSKalman function added to improve flux estimations.
* Documentation updates.
* Added a "jitter" option to help with models that do not converge.
* Updated setupYear function to handle edge years better.

EGRET 3.0.0
===========
* Added enhancements for generalized flow normalization
* Functions include runPairs, runSeries, and runGroups

EGRET 2.6.1
===========
* Added foreach dependency which allows parallelizing WRTDS.
* Added the function flexFN for flexible flow normalization.

EGRET 2.6.0
===========
* start/end year argument names unified to yearStart and yearEnd (previously included startYear and endYear)

EGRET 2.5.3
===========