@@ -106,6 +106,7 @@ export(randomSubset)
 export(readDataFromFile)
 export(readNWISDaily)
 export(readNWISInfo)
+export(readNWISSample)
 export(readUserDaily)
 export(readUserInfo)
 export(readUserSample)
