@@ -62,10 +62,10 @@ NULL
 
 #' Constants included with EGRET
 #' 
-#'\itemize{
-#'  \item{fluxConst}{Flux conversion object}
-#'  \item{qConst}{Flow conversion object}
-#'  \item{monthInfo}{Month object}
+#'\tabular{ll}{
+#' fluxConst \tab Flux conversion object\cr
+#' qConst \tab Flow conversion object\cr
+#' monthInfo \tab Month object\cr
 #'}
 #'
 #'@aliases fluxConst qConst monthInfo concConst
