@@ -1,7 +1,8 @@
 EGRET 3.0.10
 ===========
-* Removed readNWISSample because the underlying data from NWIS is retired.
+* Fix bug with 0 concentration values in readWQPSample.
 * Style updates.
+* Port readNWISSample to Water Quality Portal. NWIS services are retired.
 
 
 EGRET 3.0.9
